Bug 440545 - File operation fail dialog does not wrap text so it can be displayed off screen
Summary: File operation fail dialog does not wrap text so it can be displayed off screen
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.84.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: usability
: 427943 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-03 08:25 UTC by Richard M
Modified: 2021-08-04 21:59 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.85
Sentry Crash Report:


Attachments
controls and dialog extends off screen (1.18 MB, image/png)
2021-08-03 08:25 UTC, Richard M
Details
fail dialog maximised (149.33 KB, image/png)
2021-08-03 08:28 UTC, Richard M
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard M 2021-08-03 08:25:05 UTC
Created attachment 140478 [details]
controls and dialog extends off screen

SUMMARY


STEPS TO REPRODUCE
1. Copy/Move a file with a long name, that will trigger a failed to copy/move dialog
2. The displayed dialog will have text extend out of the viewable area including the buttons to retry or cancel the operation

OBSERVED RESULT

Content will extend off the viewable area of the screen including the control buttons

EXPECTED RESULT

Content should wrap around to fit the available screen width


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

i have attached screenshot to further lighten the issue
Comment 1 Richard M 2021-08-03 08:28:24 UTC
Created attachment 140479 [details]
fail dialog maximised
Comment 2 Nate Graham 2021-08-03 13:29:34 UTC
lol yeah
Comment 3 Bug Janitor Service 2021-08-03 17:34:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/528
Comment 4 Ahmad Samir 2021-08-03 17:36:38 UTC
In this particular case we know which dialog it is, since it has retry, it's probably the SkipDialog. It's not always easy figuring out which dialog is showing the message, we have many of them :)
Comment 5 Nate Graham 2021-08-04 15:38:40 UTC
Git commit c59c52e4f99e15b50d9bedbf6705f7d0276f87c7 by Nate Graham, on behalf of Ahmad Samir.
Committed on 04/08/2021 at 15:38.
Pushed by ngraham into branch 'master'.

Message dialogs: wrap the text

This useful when we don't know how long the text that's going to be shown is,
helps prevent too wide dialogs.

M  +1    -0    src/widgets/kurlrequesterdialog.cpp
M  +1    -0    src/widgets/pastedialog.cpp
M  +3    -1    src/widgets/skipdialog.cpp

https://invent.kde.org/frameworks/kio/commit/c59c52e4f99e15b50d9bedbf6705f7d0276f87c7
Comment 6 Patrick Silva 2021-08-04 21:54:15 UTC
is bug 427943 a duplicate?
Comment 7 Ahmad Samir 2021-08-04 21:59:23 UTC
*** Bug 427943 has been marked as a duplicate of this bug. ***
Comment 8 Ahmad Samir 2021-08-04 21:59:38 UTC
Indeed.