Message dialogs: wrap the text

This useful when we don't know how long the text that's going to be shown is,
helps prevent too wide dialogs.

BUG: 440545